# F1-Strategy

./: .gitignore  README.md  pyproject.toml  requirements.txt
inputs/: race_conditions.json  strategy.json
inputs/teams/: aggressive.json  inverse.json  rain_master.json  sc_hunter.json  standard.json  strategy1.json  strategy2.json  strategy3.json  strategy4.json  strategy5.json
models/: degradation_model.pkl  lap_time_model.pkl  sc_impact_model.pkl  training_report.json
src/f1_strategy/: collect_training_data.py  main.py  openf1_client.py  train_models.py
src/f1_strategy/agents/: collect_training_data.py  data_analysis_agent.py  ml_predictor.py  race_simulator.py  report_generator.py  strategy_agent.py  train_models.py
