[project]
name = "f1-strategy"
version = "0.1.0"
description = "F1"
authors = [
    {name = "Andrea D'Amicis"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{ include = "f1_strategy", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
