[project]
name = "f1-strategy"
version = "0.1.0"
description = "F1"
authors = [
    {name = "Andrea D'Amicis"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "f1_strategy", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
